# Trabalho-pratico-2-AEDS

./: 3_cidades.txt  3_cidades.txt.txt  4_cidades.txt  4_cidades.txt.txt  5_cidades.txt  5_cidades.txt.txt  6_cidades.txt  6_cidades.txt.txt  7_cidades.txt  7_cidades.txt.txt  8_cidades.txt  8_cidades.txt.txt  9_cidades.txt  9_cidades.txt.txt  CMakeLists.txt  README.md
codigo/: arranjo.c  demandas.h  distancias.c  main.c  output.txt  permuta.c  permuta.h  permuta2.c  teste.c  testedeperm.c
codigo/TAD-cidade/: cidade.c  cidade.h
codigo/TAD-listaCidades/: listaDeCidades.c  listaDeCidades.h
codigo/TAD-permuta/: permuta.c  permuta.h
codigo/main/: demandas.c  distancias.c  distancias.h  main.c
